# teleaccount-bot

./: .encryption_key  .env.example  .env.heroku  .gitignore  .railwayignore  .replit  ACCOUNT_FREEZE_SYSTEM_COMPLETE.md  ADMIN_FEATURES_COMPLETION_SUMMARY.md  ADMIN_FEATURES_STATUS.md  ADMIN_PANEL_BALANCE_FIX.md  ADMIN_PANEL_FIX_COMPLETE.md  ALL_FIXES_COMPLETE.py  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  AWS_DEPLOYMENT.md  BOT_TESTING_GUIDE.md  BROADCAST_PERSISTENCE_FIX.md  BYPASS_SYSTEM_COMPLETE.md  CAPTCHA_DELETION_FIX.md  CAPTCHA_FIXES_SUMMARY.py  CAPTCHA_FIX_COMPLETE.md  CAPTCHA_FIX_ROOT_CAUSE.md  CLEANUP_PROGRESS.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  COPY_PASTE_COMMANDS.txt  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_FIXES_OCT19.md  CURRENCY_CLARIFICATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MIGRATION_GUIDE.md  DEPLOY_ADMIN_FIX.md  DEPLOY_COPY_PASTE.md  DEPLOY_EASY.bat  DEPLOY_TEXT_FIXES_OCT22.md  DEPLOY_TO_EC2.sh  EC2_DEBUG_STEPS.md  EC2_MANUAL_STEPS.md  (+152 more)
alembic/: env.py
attached_assets/: Pasted-Based-on-my-analysis-of-the-code-here-is-a-thorough-diagnosis-of-the-issues-you-re-facing-with-the--1761018425753_1761018425753.txt  Pasted-Network-settings-Info-VPC-required-Info-vpc-01f867c8683fa8617-default-172-31-0-0-16-Subnet--1761076068983_1761076068985.txt  Pasted-Oct-22-11-15-46-ip-172-31-42-97-telebot-24559-2025-10-22-11-15-46-402-database-operations-INFO-1761131935587_1761131935590.txt  Pasted-ubuntu-ip-172-31-42-97-teleaccount-bot-find-type-d-name-pycache-exec-rm-rf-2-dev--1761141064254_1761141064254.txt  (+19 more)
(+81 files in other folders)
