[tool.poetry]
name = "telegram-account-bot"
version = "1.0.0"
description = "Professional Telegram Account Selling Bot with Real OTP Integration"
authors = ["Admin <admin@teleaccountbot.com>"]
readme = "README.md"
packages = [{include = "teleaccount_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
telethon = "^1.34.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
cryptography = "^41.0.7"
aiohttp = "^3.9.1"
asyncio-mqtt = "^0.16.1"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
uvloop = {version = "^0.19.0", markers = "sys_platform != 'win32'"}
psutil = "^5.9.6"
colorlog = "^6.8.0"
requests = "^2.31.0"
nest-asyncio = "^1.5.8"
httpx = "^0.25.2"
pycryptodome = "^3.19.0"
pynacl = "^1.5.0"
phonenumbers = "^8.13.26"
Pillow = "^10.1.0"
qrcode = "^7.4.2"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''